--- a/docs/docs.gradle
+++ b/docs/docs.gradle
@@ -1,6 +1,7 @@
 	// Docbook and Javadoc building and uploading tasks
 apply plugin: 'base'
 apply from: "$rootDir/gradle/deploy-docs.gradle"
+apply from: "$rootDir/gradle/deploy-schema.gradle"
 
 task docs {
 	dependsOn 'manual:reference', 'apidocs', 'guides:asciidoctor'
